fixed height issue on mobile

--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ a {
 
   .main-left {
     width: 100vw;
-    height: 50vh;
+    height: 45vh;
     display: flex;
     justify-content: center;
     align-items: center;
